<resources>
    <string name="app_name">DrawerLayout</string>
    <string name="dashboard">Dashboard</string>
    <string name="event">Event</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="activities">Activites</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="search_title">Search Title</string>
    <string name="search_hint">Search Hint</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapActivity">Maps</string>
</resources>
